fixing tests (streaming tests)
the streaming test executor previously randomly added nodes and
operated them in arbitrary order. With changes in AP-20402, these nodes
got executed, causing downstream problems. I added a "no op" job manager
that would fake the execution and I added code that waits for the added
nodes to finish their execution.

--- a/org.knime.testing/plugin.xml
+++ b/org.knime.testing/plugin.xml
@@ -74,5 +74,8 @@
       <NodeExecutionJobManagerFactory
             JobManagerFactory="org.knime.testing.streaming.testexecutor.StreamingTestNodeExecutionJobManagerFactory">
       </NodeExecutionJobManagerFactory>
+      <NodeExecutionJobManagerFactory
+            JobManagerFactory="org.knime.testing.streaming.testexecutor.noopexecutor.NoopExecutionJobManagerFactory">
+      </NodeExecutionJobManagerFactory>
    </extension>
 </plugin>
