AP-20649: Clean up SonarLint configuration
AP-20649 (Fix SonarLint bindings)

--- a/org.knime.core.tests/.settings/org.sonarlint.eclipse.core.prefs
+++ b/org.knime.core.tests/.settings/org.sonarlint.eclipse.core.prefs
@@ -1,6 +1,7 @@
-autoEnabled=true
+autoEnabled=false
+bindingSuggestionsDisabled=false
 eclipse.preferences.version=1
-idePrefixKey=
+idePrefixKey=src
 projectKey=KNIME_knime-core
 serverId=SonarCloud
-sqPrefixKey=org.knime.core.tests
+sqPrefixKey=org.knime.core/src/eclipse
