--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -4,6 +4,7 @@
    <extension-point id="NodeExecutionJobManagerFactory" name="NodeExecutionJobManagerFactory" schema="schema/org.knime.core.NodeExecutionJobManagerFactory.exsd"/>
    <extension-point id="JDBCDriver" name="JDBCDriver" schema="schema/JDBCDriver.exsd"/>
    <extension-point id="DataValueRenderer" name="DataValueRenderer" schema="schema/DataValueRenderer.exsd"/>
+   <extension-point id="DataValueFormatter" name="DataValueFormatter" schema="schema/DataValueFormatter.exsd"/>
    <extension-point id="NodeFactoryClassMapper" name="Changes NodeFactory class names in saved workflows" schema="schema/NodeFactoryClassMapper.exsd"/>
    <extension-point id="DatabaseUtility" name="DatabaseUtility" schema="schema/DatabaseUtility.exsd"/>
    <extension-point id="WizardNodeView" name="WizardNodeView" schema="schema/WizardNodeView.exsd"/>
@@ -774,4 +775,11 @@
             backend="org.knime.core.data.container.BufferedTableBackend">
       </TableBackend>
    </extension>
+   <extension
+	   point="org.knime.core.DataValueFormatter">
+	<formatter
+	      factoryClass="org.knime.core.data.property.ValueFormatModelNumber$Factory"
+	      formatterClass="org.knime.core.data.property.ValueFormatModelNumber">
+	</formatter>
+	 </extension>
 </plugin>
