--- a/org.knime.core/plugin.xml
+++ b/org.knime.core/plugin.xml
@@ -23,6 +23,7 @@
    <extension-point id="ImageContentFactory" name="Contributes custom image content to an image port object (NO public API)" schema="schema/ImageContentFactory.exsd"/>
    <extension-point id="RpcTransportFactory" name="RpcTransportFactory" schema="schema/RpcTransportFactory.exsd"/>
    <extension-point id="PortTypeClassMapper" name="PortTypeClassMapper" schema="schema/PortTypeClassMapper.exsd"/>
+   <extension-point id="NodeFunc" name="NodeFunc" schema="schema/NodeFunc.exsd"/>
    <extension point="org.knime.core.NodeExecutionJobManagerFactory">
       <NodeExecutionJobManagerFactory JobManagerFactory="org.knime.core.node.exec.ThreadNodeExecutionJobManagerFactory"/>
       <NodeExecutionJobManagerFactory JobManagerFactory="org.knime.core.node.exec.ThreadComponentExecutionJobManagerFactory"/>
