--- a/org.knime.core.tests/build.properties
+++ b/org.knime.core.tests/build.properties
@@ -2,7 +2,8 @@ bin.includes = META-INF/,\
                fragment.xml,\
                files/,\
                LICENSE.TXT,\
-			   CHANGELOG.md
+               CHANGELOG.md,\
+               .
 jars.compile.order = .
 source.. = src/
 output.. = bin/
